--- a/app/templates/client_view.html
+++ b/app/templates/client_view.html
@@ -198,8 +198,8 @@
         }
         
         .logo {
-            width: 150px;              /* ← CHANGE THIS to make logo bigger/smaller */
-            height: 150px;             /* ← CHANGE THIS (keep same as width) */
+            width: 300px;              /* ← CHANGE THIS to make logo bigger/smaller */
+            height: 300px;             /* ← CHANGE THIS (keep same as width) */
             background: url('/static/Logoframe.png') center center;  /* ← OCTAGONAL FRAME */
             background-size: contain;
             background-repeat: no-repeat;
@@ -223,7 +223,7 @@
 
         /* Fallback emoji if image doesn't load */
         .logo::before {
-            content: '🌿';
+            content: '';
             font-size: 32px;
             position: absolute;
             z-index: 0;
