--- a/app/templates/client_view.html
+++ b/app/templates/client_view.html
@@ -1257,7 +1257,7 @@
                 alert('Error sending message. Please try again.');
             } finally {
                 sendBtn.disabled = false;
-                sendBtn.textContent = 'Send Question';
+                sendBtn.textContent = 'Send Message';
             }
         }
 
