Update health concern scale hints in client view

--- a/app/templates/client_view.html
+++ b/app/templates/client_view.html
@@ -839,7 +839,7 @@
 
             <div class="checkin-question">
                 <label>Your main health concern</label>
-                <div class="checkin-scale-hints"><span>Much Worse</span><span>Much Better</span></div>
+                <div class="checkin-scale-hints"><span>No Change</span><span>Best Outcome</span></div>
                 <div class="rating-buttons" id="ratings-symptom"></div>
             </div>
 
