--- a/app/templates/client_view.html
+++ b/app/templates/client_view.html
@@ -863,8 +863,7 @@
             </div>
 
             <div class="checkin-actions">
-                <button class="checkin-skip" onclick="closeCheckin()">Skip for now</button>
-                <button class="checkin-submit" id="checkin-submit-btn" disabled onclick="submitCheckin()">Submit</button>
+                <button class="checkin-submit" id="checkin-submit-btn" disabled onclick="submitCheckin()" style="flex: 1;">Submit</button>
             </div>
         </div>
     </div>
